updated new endpoints defination in swagger doc
