# routes/parcel.routes.js
@@ -5,9 +5,9 @@ const { getParams, getQueryId } = require('../middlewares/query.params.mid');
 
 const router = express.Router();
 
-router.post('/projects/:projectname/parcel/types/new', verifyToken, getParams, ParcelController.newType);
-router.get('/projects/:projectname/parcel/types', verifyToken, getParams, ParcelController.getParcels);
-router.get('/projects/:projectname/parcel/types/delete', verifyToken, getParams, getQueryId, ParcelController.deleteParcel);
-router.post('/projects/:projectname/parcel/types/new-field', verifyToken, getParams, getQueryId, ParcelController.addTypeField);
+router.post('/:projectname/parcel/types/new', verifyToken, getParams, ParcelController.newType);
+router.get('/:projectname/parcel/types', verifyToken, getParams, ParcelController.getParcels);
+router.get('/:projectname/parcel/types/delete', verifyToken, getParams, getQueryId, ParcelController.deleteParcel);
+router.post('/:projectname/parcel/types/add_field', verifyToken, getParams, getQueryId, ParcelController.addTypeField);
 
 module.exports = router;
